# sbd-pub

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  FAILED_OPTIMIZATIONS.md  GPU_PORTING_PLAN.md  LICENSE.txt  PERFORMANCE_LOG.md  README.md
applications/selected_basis_diagonalization/: Makefile  README.md
applications/selected_basis_diagonalization/benchmarks/: TEST_EXAMPLES.md  WORKING_EXAMPLES.txt  benchmark.sh  generate_benchmark_table.py  profile.sh  run_with_timing.sh  run_with_timings_real.sh.deprecated  sbatch_run.sh.old  sbatch_run_32.sh  sbd_run.sh  scan_param_perf.sh  show-profile-tree.py  summarize.py
applications/selected_basis_diagonalization/src/: Makefile  main.cc
apps/caop_selected_basis_diagonalization/: CMakeLists.txt  Configuration  README.md  basis.txt  gen_bits.py  gen_ham.py  hamiltonian.txt  main.cc  run.sh
apps/chemistry_gdb_selected_basis_diagonalization/: CMakeLists.txt  Configuration  README.md  det2.txt  det3.txt  main.cc  run.sh
apps/chemistry_tpb_selected_basis_diagonalization/: .gitignore  CMakeLists.txt  Configuration  Makefile  Makefile.nvhpc  README.md  main.cc  run.sh
apps/gen_dets/: CMakeLists.txt  Configuration  Makefile  det0.txt  det1.txt  main.cc  run.sh
cmake/toolchains/: amdclang.cmake  nvhpc.cmake
data/c2h2/: README.md  alpha-100k.txt  alpha-30k.txt
data/c4h4/: README.md  alpha-100k.txt  alpha-30k.txt
data/h2o/: README.md
data/n2/: README.md  full-alpha.txt
data/nh3/: README.md  alpha.txt  fcidump.txt
include/sbd/caop/basic/: basis.h  carryover.h  davidson.h  generalop.h  helper.h  mkham.h  mult.h  restart.h  sbdiag.h
include/sbd/chemistry/basic/: correlation.h  correlation_thrust.h  davidson_thrust.h  determinants.h  determinants_thrust.h  excitation.h  hij_omp_offload.h  inc_all.h  integrals.h  integrals_thrust.h  lanczos_thrust.h  makedeterminants.h  makeintegrals.h  mult.h  omp_offload.h
include/sbd/chemistry/gdb/: carryover.h  correlation.h  correlation_thrust.h  davidson.h  davidson_thrust.h  expansion.h  helper.h  helper_thrust.h  inc_all.h  mult.h  mult_thrust.h  occupation.h  qcham.h  sbdiag.h
include/sbd/chemistry/tpb/: correlation.h  correlation_thrust.h  davidson.h  davidson_thrust.h  determinant_cache_omp.h  extend.h  helper.h  helper_thrust.h  inc_all.h  mult.h  mult_thrust.h  occupation.h  qcham.h  rdmat.h  sbdiag.h
include/sbd/framework/: bit_manipulation.h  cublas_utility.h  cuda_reduce.h  cuda_utility.h  det_vector.h  dm_vector.h  fcidump.h  hip_reduce.h  hp_numeric.h  jacobi.h  mpi_utility.h  mpi_utility_thrust.h  nccl_utility.h  nvtx.h  thrust_kernels.h  type_def.h
samples/selected_basis_diagonalization/: Makefile
tests/: .gitignore  Makefile  README.md  utils.h
tests/functionality/: Makefile  test_determinants.cc  test_gpu_correctness.cc  test_gpu_fe4s4_minimal.cc  test_gpu_hij_device_functions.cc  test_inner_product.cc
